--- a/styles.less
+++ b/styles.less
@@ -208,7 +208,6 @@ body {
           height: 100%;
           max-height: 648px;
           position: relative;
-          background-color: @SaturedGreen;
           border: none;
 
           img {
@@ -2383,10 +2382,6 @@ body {
         height: 150vh;
 
         .banner-logo {
-          .center_column();
-          width: 80%;
-          height: 100%;
-
           .logo-presentation {
             width: 100%;
             height: 100%;
@@ -2418,23 +2413,12 @@ body {
                 a {
                   font-size: 16px;
                 }
-
-                &:hover {
-                  background-color: @DarkGreen;
-                }
               }
             }
           }
 
           .banner-img {
-            .center();
-            width: 100%;
             height: 50%;
-
-            img {
-              width: 100%;
-              max-width: 900px;
-            }
           }
         }
       }
@@ -2442,29 +2426,35 @@ body {
       .services-locations {
         .between();
         flex-direction: column;
+        height: fit-content;
 
         h1 {
-          font-size: 30px;
+          font-size: 26px;
         }
 
         .group-cards {
-          .center();
-          margin: 0;
+          .center_column();
+          margin: 16px 0;
 
           .cards {
             max-width: 180px;
             min-width: 145px;
             max-height: 280px;
+            margin: 16px 0;
+
+            img {
+              height: 100%;
+            }
 
             p {
-              font-size: 22px;
+              font-size: 20px;
             }
           }
         }
 
         p {
-          width: 70%;
-          font-size: @Paragraph16;
+          width: 80%;
+          font-size: @Paragraph_P;
         }
       }
 
