Mobile Sobre-nos

--- a/styles.less
+++ b/styles.less
@@ -2450,46 +2450,18 @@ body {
       }
 
       .about-us {
-        .center();
-        height: fit-content;
-        padding: 32px 0;
-
         .about-us-content {
-          .center_column();
-          width: 80%;
-          height: 100%;
-
           .text-about-us {
-            .center();
-            width: 100%;
-            height: 50%;
-            margin-bottom: 32px;
-
             article {
-              width: 90%;
-              text-align: center;
+              width: 100%;
 
               h1 {
-                font-size: 30px;
-                color: @LightGray;
-                margin-bottom: 32px;
+                font-size: 26px;
               }
 
               p {
-                font-size: @Paragraph16;
+                font-size: @Paragraph_P;
               }
-            }
-          }
-
-          .img-about-us {
-            width: 80%;
-            height: 50%;
-            display: flex;
-            justify-content: center;
-
-            img {
-              width: 60%;
-              height: 100%;
             }
           }
         }
