--- a/styles.less
+++ b/styles.less
@@ -2468,12 +2468,13 @@ body {
       }
 
       .quote-call {
-        background-size: 100% 100%;
+        background-size: cover;
+        background-position: center;
         padding: 16px 0;
 
         .content-quote-call {
           .center_column();
-          width: 60%;
+          width: 80%;
           height: 100%;
 
           article {
@@ -2481,7 +2482,7 @@ body {
             margin: 0;
 
             p {
-              font-size: @Paragraph16;
+              font-size: @Paragraph_P;
               color: @LightGray;
               margin: 16px 0;
             }
@@ -2491,7 +2492,7 @@ body {
             height: 40px;
 
             a {
-              font-size: 20px;
+              font-size: 18px;
             }
           }
         }
