--- a/styles.less
+++ b/styles.less
@@ -2494,35 +2494,19 @@ body {
         height: fit-content;
 
         .content-services {
-          .between();
-          flex-direction: column;
-          width: 80%;
-
           h1 {
-            font-size: 30px;
+            font-size: 26px;
           }
 
           .group-cards-services {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            max-height: none;
-
             .cards-services {
-              margin: 32px 0;
-              width: 40%;
-              max-width: 325px;
-              height: 25%;
+              width: 50%;
             }
           }
 
           article {
-            margin: 0;
-
             p {
-              font-size: @Paragraph16;
-              margin: 8px 0;
+              font-size: @Paragraph_P;
             }
           }
         }
