--- a/styles.less
+++ b/styles.less
@@ -2519,43 +2519,23 @@ body {
       }
 
       .benefits {
-        padding: 32px 0;
-        height: fit-content;
-
         .content-benefits {
-          .between();
-          flex-direction: column;
-          width: 80%;
-
           h1 {
-            font-size: 30px;
-            margin: 0;
+            font-size: 26px;
           }
 
           .group-cards-benefits {
-            flex-direction: column;
-            align-items: center;
-            max-height: none;
-            margin: 0;
-
             .cards-benefits {
-              width: 40%;
-              height: 33%;
-              margin: 32px 0;
-            }
-
-            p {
-              bottom: 15%;
-              font-size: 20px;
+              width: 50%;
+              height: 40%;
             }
           }
 
           article {
-            width: 50%;
-            margin: 16px 0;
+            width: 100%;
 
             p {
-              font-size: @Paragraph16;
+              font-size: @Paragraph_P;
             }
           }
         }
