--- a/styles.less
+++ b/styles.less
@@ -2542,9 +2542,6 @@ body {
       }
 
       .faq {
-        height: fit-content;
-        padding: 32px 0;
-
         .faq-content {
           .center_column();
           width: 80%;
@@ -2585,114 +2582,46 @@ body {
       }
 
       .contacts {
-        height: 150vh;
-        padding: 32px 0;
-
         .contacts-content {
-          .center_column();
-          width: 80%;
-          height: 100%;
-
           h1 {
-            font-size: 30px;
-            margin: 0 0 32px;
+            font-size: 26px;
           }
 
           .group-form-text {
-            display: flex;
+            .between();
             flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
             height: 100%;
             margin: 0;
 
             .form {
-              width: 40%;
-              max-width: 280px;
-              min-width: 235px;
-              height: 75%;
-              max-height: 350px;
-              padding: 32px 16px;
-
-              h2 {
-                margin: 0;
-                font-size: 20px;
-              }
-
               form {
-                width: 100%;
-                height: 90%;
-
                 .group-input {
-                  width: 100%;
-                  margin-top: 32px;
-
                   input {
-                    height: 40px;
-
                     &::placeholder {
-                      font-size: 16px;
+                      font-size: 14px;
                     }
                   }
 
                   select {
-                    height: 40px;
-                    font-size: 16px;
+                    font-size: 14px;
                   }
-
-                  .check-discard {
-                    margin: 16px 0;
-
-                    input {
-                      width: 16px;
-                      height: 16px;
-                    }
-
-                    label {
-                      margin: 0 4px;
-                      font-size: @Paragraph16;
-                    }
-
-                    abbr {
-                      img {
-                        width: 18px;
-                        height: 18px;
-                      }
-                    }
-                  }
-                }
-
-                .form-button {
-                  height: 40px;
-                  font-size: 16px;
                 }
               }
             }
 
             .text-contact {
-              align-items: center;
-              width: 100%;
-              height: 75%;
-
               article {
-                text-align: center;
-
                 h2 {
-                  font-size: 22px;
+                  font-size: 18px;
                 }
 
                 p {
-                  font-size: @Paragraph16;
-                  margin: 0 auto;
+                  font-size: @Paragraph_P;
                 }
               }
 
               .group-icons {
-                margin: 32px 0;
-
-                img {
-                  margin: 0 4px;
-                }
+                margin: 32px 0 0;
               }
             }
           }
