Ajustes nos cards

--- a/styles.less
+++ b/styles.less
@@ -2437,6 +2437,7 @@ body {
 
           .cards {
             margin: 16px 0;
+            min-width: 170px;
 
             p {
               font-size: 20px;
@@ -2502,6 +2503,7 @@ body {
           .group-cards-services {
             .cards-services {
               width: 50%;
+              min-width: 170px;
             }
           }
 
@@ -2528,6 +2530,7 @@ body {
           .group-cards-benefits {
             .cards-benefits {
               width: 50%;
+              min-width: 170px;
               height: 40%;
             }
           }
