--- a/styles.less
+++ b/styles.less
@@ -84,6 +84,10 @@ body {
               text-decoration: none;
               color: @LightGray;
               font-size: 18px;
+
+              img {
+                display: none;
+              }
             }
 
             button {
@@ -928,6 +932,10 @@ body {
                 a {
                   text-decoration: none;
                   color: @LightGray;
+
+                  &:hover {
+                    text-decoration: underline;
+                  }
                 }
               }
             }
@@ -2363,12 +2371,17 @@ body {
           width: 90%;
 
           ul {
+            justify-content: space-between;
             li {
               a {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                font-size: @Paragraph_P;
+                font-size: 12px;
+
+                img {
+                  display: inline;
+                }
               }
 
               &:nth-child(7) {
