--- a/styles.less
+++ b/styles.less
@@ -375,6 +375,7 @@ body {
             img {
               width: 100%;
               height: 100%;
+              min-height: 266px;
             }
 
             .circle-services {
@@ -451,6 +452,7 @@ body {
           img {
             width: 100%;
             height: 100%;
+            min-height: 266px;
           }
 
           .circle-benefits {
@@ -2262,6 +2264,10 @@ body {
           .carousel {
             .carousel-container {
               width: 90%;
+
+              img {
+                max-height: 300px;
+              }
 
               .carousel-item {
                 min-width: 160px;
