--- a/styles.less
+++ b/styles.less
@@ -1123,10 +1123,20 @@ body {
         }
       }
 
-      .quote-call-ii {
-        width: 100%;
-        height: 951px;
-        background-color: red;
+      .acting {
+        .acting-content {
+          .acting-text {
+            article {
+              h1 {
+                font-size: 35px;
+              }
+
+              p {
+                font-size: @Paragraph_M;
+              }
+            }
+          }
+        }
       }
 
       .benefits {
