--- a/styles.less
+++ b/styles.less
@@ -1615,10 +1615,26 @@ body {
         }
       }
 
-      .quote-call-ii {
-        width: 100%;
-        height: 951px;
-        background-color: red;
+      .acting {
+        .acting-content {
+          .acting-text {
+            article {
+              h1 {
+                font-size: 35px;
+              }
+
+              p {
+                font-size: @Paragraph16;
+              }
+            }
+          }
+
+          .acting-map {
+            .map {
+              height: 400px;
+            }
+          }
+        }
       }
 
       .benefits {
