--- a/styles.less
+++ b/styles.less
@@ -2625,10 +2625,40 @@ body {
         }
       }
 
-      .quote-call-ii {
-        width: 100%;
-        height: 951px;
-        background-color: red;
+      .acting {
+        height: fit-content;
+        padding: 32px 0;
+
+        .acting-content {
+          .center_column();
+          width: 80%;
+
+          .acting-text {
+            margin-bottom: 32px;
+            width: 100%;
+
+            article {
+              text-align: center;
+              h1 {
+                font-size: 26px;
+                margin-bottom: 32px;
+              }
+
+              p {
+                font-size: @Paragraph_P;
+                width: 100%;
+                margin: 0;
+              }
+            }
+          }
+
+          .acting-map {
+            .map {
+              height: 280px;
+              width: 280px;
+            }
+          }
+        }
       }
 
       .benefits {
