Texto da seção Atuacao

--- a/styles.less
+++ b/styles.less
@@ -423,11 +423,12 @@ body {
             color: @LightGray;
             h1 {
               font-size: 50px;
+              margin-bottom: 32px;
             }
 
             p {
               font-size: @Paragraph_G;
-              margin: 16px 0;
+
               width: 80%;
             }
           }
