Ajuste de margens

--- a/styles.less
+++ b/styles.less
@@ -535,6 +535,7 @@ body {
           h1 {
             font-size: @Title;
             color: @LightGray;
+            margin-bottom: 32px;
           }
 
           p {
@@ -2813,6 +2814,7 @@ body {
           .about-us-footer {
             width: 60%;
             height: 50%;
+            // margin-bottom: 16px;
             align-items: center;
             padding: 0;
 
@@ -2831,6 +2833,7 @@ body {
             }
 
             .contacts-icons {
+              margin: 8px 0 0;
               a {
                 img {
                   width: 22px;
@@ -2844,7 +2847,7 @@ body {
             .center();
             width: 60%;
             height: 50%;
-            margin: 0;
+            margin: 16px 0;
 
             ul {
               width: fit-content;
